[project]
name = "sololc-vvault"
version = "0.2.1"
description = "vlt - Minimalist Secure Vault (Sololc-vvault CLI)"
readme = "README.md"
license = { text = "BSD-3-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
authors = [
    { name = "Josh Klein", email = "gigacoderx@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "cryptography>=46.0.7",
    "pyotp>=2.9.0",
    "pyperclip>=1.11.0",
    "rich>=14.3.3",
    "typer>=0.26.8",  
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "qrcode>=8.2",
]

[project.urls]
Homepage = "https://github.com/nuv0x/sololc-vvault"
Documentation = "https://github.com/nuv0x/sololc-vvault#readme"
Repository = "https://github.com/nuv0x/sololc-vvault"
Issues = "https://github.com/nuv0x/sololc-vvault/issues"
Sponsor = "https://ko-fi.com/sololc"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
vlt = "sololc_vvault:app"  # Key: Map the vlt command to your program


